--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,8 @@ jobs:
       - run:
           name: download raspi image
           command: |
+            apt-get -qq update
+            apt-get -qq install wget
             mkdir -p /tmp/downloads
             wget -nc -P /tmp/downloads https://downloads.raspberrypi.org/raspbian_latest && ls /tmp/downloads
       - save_cache:
@@ -83,7 +85,6 @@ jobs:
       - run:
           name: install LGMLRasp dependencies
           command: |
-            apt-get -qq update
             apt-get -qq install -y git unzip
             git submodule update --init --recursive --remote
             rm -rf /tmp/images
