remove beta from version number use standard semver from now on

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build_job:
     - "echo installDeps"
     - "source Scripts/export_platform_vars.sh"
     - "sh Scripts/$LGML_PLATFORM_TYPE/installDeps.sh;"
-    - "python Scripts/buildScript.py --build --beta"
+    - "python Scripts/buildScript.py --build "
 
 
 test_job:
@@ -34,7 +34,7 @@ package:
     - master@lgml/lgml
   stage: package
   script:
-    - "python Scripts/buildScript.py --package --export --beta"
+    - "python Scripts/buildScript.py --package --export "
 
 
   # artifacts:
