--- a/Builds/VisualStudio2015/resources.rc
+++ b/Builds/VisualStudio2015/resources.rc
@@ -7,7 +7,7 @@
 #include <windows.h>
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION  1,2,2-beta,0
+FILEVERSION  1,2,3,0
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
@@ -15,9 +15,9 @@ BEGIN
     BEGIN
       VALUE "CompanyName",  "Organic Orchestra\0"
       VALUE "FileDescription",  "LGML\0"
-      VALUE "FileVersion",  "1.2.2-beta\0"
+      VALUE "FileVersion",  "1.2.3\0"
       VALUE "ProductName",  "LGML\0"
-      VALUE "ProductVersion",  "1.2.2-beta\0"
+      VALUE "ProductVersion",  "1.2.3\0"
     END
   END
 
