add app property panel add commandline parsing of user parameters update build files

--- a/Builds/LinuxMakefile/Makefile
+++ b/Builds/LinuxMakefile/Makefile
@@ -223,6 +223,7 @@ OBJECTS_APP := \
   $(JUCE_OBJDIR)/TimeManager_2ea8a747.o \
   $(JUCE_OBJDIR)/TimeManagerUI_681c6b5b.o \
   $(JUCE_OBJDIR)/TimeMasterCandidate_ed6091db.o \
+  $(JUCE_OBJDIR)/AppPropertiesUI_2bd48916.o \
   $(JUCE_OBJDIR)/MainWindow_5f9c9b05.o \
   $(JUCE_OBJDIR)/LGMLDragger_a52aaed4.o \
   $(JUCE_OBJDIR)/LookAndFeelOO_b515076c.o \
@@ -861,6 +862,11 @@ $(JUCE_OBJDIR)/TimeManagerUI_681c6b5b.o: ../../Source/Time/TimeManagerUI.cpp
 $(JUCE_OBJDIR)/TimeMasterCandidate_ed6091db.o: ../../Source/Time/TimeMasterCandidate.cpp
 	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
 	@echo "Compiling TimeMasterCandidate.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
+
+$(JUCE_OBJDIR)/AppPropertiesUI_2bd48916.o: ../../Source/UI/AppPropertiesUI.cpp
+	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
+	@echo "Compiling AppPropertiesUI.cpp"
 	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
 
 $(JUCE_OBJDIR)/MainWindow_5f9c9b05.o: ../../Source/UI/MainWindow.cpp
