--- a/Builds/VisualStudio2015/LGML_App.vcxproj.filters
+++ b/Builds/VisualStudio2015/LGML_App.vcxproj.filters
@@ -829,6 +829,9 @@
     <ClCompile Include="..\..\Source\Time\TimeMasterCandidate.cpp">
       <Filter>LGML\Source\Time</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\UI\AppPropertiesUI.cpp">
+      <Filter>LGML\Source\UI</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\UI\MainWindow.cpp">
       <Filter>LGML\Source\UI</Filter>
     </ClCompile>
@@ -3071,6 +3074,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Time\TimeMasterCandidate.h">
       <Filter>LGML\Source\Time</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\UI\AppPropertiesUI.h">
+      <Filter>LGML\Source\UI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\UI\MainWindow.h">
       <Filter>LGML\Source\UI</Filter>
