start v1.2.4 remove linkedParameter endless loop better icon / colors in prefpanel NodeManagerUI is singleton

--- a/Builds/VisualStudio2015/LGML_App.vcxproj.filters
+++ b/Builds/VisualStudio2015/LGML_App.vcxproj.filters
@@ -508,6 +508,9 @@
     <ClCompile Include="..\..\Source\Controllable\ControllableIndexedContainer.cpp">
       <Filter>LGML\Source\Controllable</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Controllable\Parameter\ParameterContainerSync.cpp">
+      <Filter>LGML\Source\Controllable\Parameter</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\Controllable\Parameter\UI\GenericParameterContainerEditor.cpp">
       <Filter>LGML\Source\Controllable\Parameter\UI</Filter>
     </ClCompile>
@@ -2738,6 +2741,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Controllable\ControllableIndexedContainer.h">
       <Filter>LGML\Source\Controllable</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Controllable\Parameter\ParameterContainerSync.h">
+      <Filter>LGML\Source\Controllable\Parameter</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Controllable\Parameter\UI\GenericParameterContainerEditor.h">
       <Filter>LGML\Source\Controllable\Parameter\UI</Filter>
